# cmake_note

./: CMakeLists.txt  README.md  Review2.txt  cmake笔记.md  file.md  install.cpp  note.txt  test.cpp
123456/: 123456.cpp  123456.h
cmake_parse_arguments/: CMakeLists.txt
get_filename_component/: CMakeLists.txt
new-port/: CMakeLists.txt  portfile.cmake  vcpkg.json
new-port/demo/: export-cmake-targets.patch  portfile.cmake  vcpkg.json
